# c-_review

./: .gitignore  CMakeLists.txt  README.md  main.cpp
demo/: demo_1.cpp  demo_2.cpp  demo_3.cpp  demo_4_container.cpp  demo_5_string.cpp  demo_6_pointer.cpp  demo_7_memory_block.cpp  demo_8_type.cpp  demo_ffmpeg.cpp
demo/demo_10/: Complex.cpp  Complex.h  demo_10_oop.cpp
demo/demo_11_stl/: demo_adapter.cpp  demo_algorithm.cpp  demo_container.cpp  demo_functor.cpp  demo_iterator.cpp  demo_multi_thread.cpp
demo/demo_12_makefile/: demo_12_makefile.cpp
demo/demo_9/: demo_9.cpp  demo_9_function.cpp  demo_9_function.h
demo/public/: _cmpublic.h  _public.cpp  _public.h
lib/: libavdevice.dylib  libavfilter.dylib  libavformat.58.76.100.dylib  libavutil.56.70.100.dylib  libswresample.3.dylib  libswscale.5.9.100.dylib
lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
